--- a/Frontend/src/Components/NavBar/NavBar.css
+++ b/Frontend/src/Components/NavBar/NavBar.css
@@ -1,3 +1,11 @@
-.search_bar{
-    font-family: "Poppins", sans-serif;
+.search_bar {
+  font-family: "Poppins", sans-serif;
+}
+
+.profile {
+  font-family: "Poppins", sans-serif;
+}
+
+.nav_header {
+  font-family: "Nunito Sans", sans-serif;
 }
