--- a/Frontend/src/Components/Income_Page/IncomePage.css
+++ b/Frontend/src/Components/Income_Page/IncomePage.css
@@ -2,3 +2,9 @@
   font-family: "Poppins", sans-serif;
   box-shadow: 3px 4px 7px 4px #eeeeee;
 }
+
+.income-content::after{
+  content: "";
+  height: 15vmax;
+  width: 15vmax;
+}
