--- a/Frontend/src/Components/Income_Page/IncomePage.css
+++ b/Frontend/src/Components/Income_Page/IncomePage.css
@@ -10,10 +10,10 @@
   content: "";
   height: 15vmax;
   width: 100%;
-  background-color: #624FA4;
+  background-color: #624fa4;
   position: absolute;
   top: 0;
-  transition: all 0.5s;
+  transition: all 0.8s;
   z-index: -20;
   border-top-left-radius: 9999px;
   border-top-right-radius: 9999px;
@@ -26,4 +26,18 @@
   transform: scale(2);
   left: 0;
   top: 0;
+}
+
+.income-content:hover {
+  transition: color 0.1s ease 0.1s;
+}
+
+.income-content:hover {
+  color: #f7f6f6;
+  .income-content-btn {
+    color: #624fa4;
+  }
+  .income-content-timeStamp {
+    color: #f7f6f6;
+  }
 }
